# SimpleFilterProgramProject

./: CMakeLists.txt  ColorBMP.cpp  ColorBMP.h  Controller.cpp  Controller.h  Crop.cpp  Crop.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  HalftoneFilter.cpp  HalftoneFilter.h  ImageBMP.cpp  ImageBMP.h  LoadSaveBMP.cpp  LoadSaveBMP.h  NegativeFilter.cpp  NegativeFilter.h  SharpeningFilter.cpp  SharpeningFilter.h  image_processor.cpp
